# crew_projects

./: README.md
stock_analysis/stock_analysis/: pyproject.toml
stock_analysis/stock_analysis/src/stock_analysis/: crew.py  main.py
